# yatzy

./: .gitignore  .pylintrc  Makefile  README.md  main.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: main.yml
src/: board.py  cli.py  die.py  games.py  gui.py  hand.py  input.py  rules.py
tests/: test_board.py  test_combination_strategy.py  test_die.py  test_game.py  test_hand.py  test_reroll_strategy.py  test_rules.py
yatzy/: board.py  cli.py  cli_parser.py  combination_strategy.py  engine.py  games.py  gui.py  hand.py  main.py  reroll_strategy.py  rules.py  test_utils.py  utils.py
